# hello-cpp

./: .clang-format  .gitignore  404.html  CMakeLists.txt  READMD.md  README.md  build.bat  build.sh  clean.sh  docker-compose.yml  git.md  git.sh  hashmap.json  index.html  package.json  pnpm-lock.yaml  shell
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: deploy-docs.pnpm.yml  docs.yml
.vitepress/: config.mts
app/: CMakeLists.txt  generic_programming.cpp  initializer_list.cpp  lambda_expression.cpp  log.cpp  lvalue_rvalue.cpp  main.cpp  memory_deep_copy.cpp  memory_shallow_copy.cpp  move_constructor-optim.cpp  move_constructor.cpp  producer_consumer.cpp  recursive_print.cpp  reference.cpp  rvalue.cpp  test-linkedlist.cpp  test-myclass.cpp  test_linkedlist.cpp
app/algorithm/: CMakeLists.txt  dynamic_programming.cpp
app/cxx11/: CMakeLists.txt  cxx11.cpp  lambda_expression.cpp  lvalue_rvalue.cpp  smart_pointer.cpp  std_bind.cpp  std_function.cpp  universal_reference.cpp  variadic_templates-recursive_print.cpp  variadic_templates.cpp
app/design_pattern/: CMakeLists.txt  decorator.cpp
app/sort/: CMakeLists.txt  sort.cpp
app/stl/: CMakeLists.txt  stl_vector.cpp
assets/: app.8Gy2x2Nw.js  cmake_compile-executable-file.md.TrPQqU6x.js  cmake_install.md.Dnjl_pTi.js  cmake_intro.md.DVqiqcXZ.js  index.md.kUS1tzgV.lean.js  starter_install-and-stater.md.BomLvbPt.lean.js  style.DNfsiHV5.css
assets/chunks/: @localSearchIndexroot.bf1S2Lih.js  VPLocalSearchBox.DyppEbq2.js  framework.DsO3qOin.js  theme.D13QNlLO.js
cmake/: compile-executable-file.html  install.html  intro.html
demo/: CMakeLists.txt
demo/hello-dynamic-library/: CMakeLists.txt
demo/hello-dynamic-library/app/: hello_dynamic_library_test.cpp
demo/hello-dynamic-library/include/: hello_dynamic_library.hpp
demo/hello-dynamic-library/src/: hello_dynamic_library.cpp
demo/hello-world/: CMakeLists.txt  hello-world.cpp
dockerfiles/: Dockerfile
docs/: README.md  algorithm_KMP.md  index.md  index.txt  lvalue_and_rvalue.md  memory_copy.md  move.md  std.md  trick.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: style.scss
docs/.vuepress/: config.ts  navbar.ts
docs/.vuepress/plugin/copy-code/lib/: index.ts
docs/.vuepress/styles/: palette.scss
docs/3rd_patry/gflags/: gflags.md
docs/3rd_patry/glog/: glog.md
docs/3rd_patry/opencv/: opencv.md
docs/3rd_patry/opencv/sift/: sift.md
docs/3rd_patry/openvino/: openvino.md
docs/STL/: stl_vector.md  unordered_map.md  vector.md
docs/algorithm/: DynamicProgramming.md
docs/base/: lambda.md  lvalue_rvalue.md
docs/cmake/: compile-executable-file.md  compile-executable_file.md  compile-library.md  find_package.md  hello-world.md  install.md  intro.md
docs/cmake/images/: cmake.drawio
docs/cxx11/: cxx11.md  lambda.md  smart_pointer.md  std_function.md  std_function_bind.md  variadic_templates.md
docs/cxx_stl/: stack.md  stl_pointer.md
docs/design_pattern/: decorator.md
docs/starter/: install-and-stater.md
include/: IntList.h  LinkedList.hpp
include/utils/: color.h  cutetime.hpp  print.hpp
scripts/: build.sh  git.sh  update-compile.sh
scripts/compile/: boost.sh  cmake.sh  gflags.sh  glog.sh  libpng.sh  llvm-clang-fromsource.sh  llvm-clang-package.sh  nginx.sh  ninja.sh  onnx.sh  onnxruntime.sh  opencv.sh  qt.sh  qtbase.sh
src/: CMakeLists.txt  IntList.cpp
src/myClass/: myClass.cpp
starter/: install-and-stater.html
test/: CMakeLists.txt  test-gflags.cpp  test-glog.cpp  test-opencv.cpp
